--- a/js/config.json
+++ b/js/config.json
@@ -1,4 +1,3 @@
 {
-	"uri" : "mongodb+srv://campusdate:rpisdd2022rpisdd2022@apollo.arcator.co.uk:220/?maxPoolSize=20&w=majority",
-	
+	"uri" : "mongodb://campusdate:rpisdd2022rpisdd2022@apollo.arcator.co.uk:220/?maxPoolSize=20&w=majority&connectTimeoutMS=1000"
 }
